--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@types/react": "^16.9.11",
+    "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-markdown": "^4.2.2",
     "react-scripts": "3.2.0",
     "typescript": "^3.7.2"
   },
