--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.0",
     "@types/react": "^16.9.11",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
